force-app/main/default/objects/Product2/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <label>Admin Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>