force-app/main/default/objects/Product2/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <label>MRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>