force-app/main/default/objects/Product2/fields/OTC__c.field-meta.xml
<CustomField>
    <fullName>OTC__c</fullName>
    <label>OTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>