force-app/main/default/objects/Product2/fields/Total_MRC_Per_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC_Per_Employees__c</fullName>
    <label>Total MRC Per Employees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>