force-app/main/default/objects/Product2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>MRC__c</columns>
    <columns>OTC__c</columns>
    <columns>Admin_Fee__c</columns>
    <columns>Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>